kubernetes/apps/o11y/grafana/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: grafana-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: grafana
  oidc:
    provider:
      issuer: "https://id.${SECRET_DOMAIN}"
    clientID: "319d4b0b-42d2-42cc-a09d-a557418f6834"
    clientSecret:
      name: grafana-oidc-secret
    redirectURL: "https://grafana.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    cookieDomain: "${SECRET_DOMAIN}"
    cookieNameOverrides:
      - name: IdToken
        value: grafana-id-token
      - name: AccessToken
        value: grafana-access-token
    forwardAccessToken: true
    scopes:
      - openid
      - profile
      - email
      - groups
